<resources>
    <string name="app_name">Mars</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="mars_rover_photos">Mars Rover Photos</string>
    <string name="fhaz">FHAZ</string>
    <string name="rhaz">RHAZ</string>
    <string name="mast">MAST</string>
    <string name="chemcam">CHEMCAM</string>
    <string name="mahli">MAHLI</string>
    <string name="mardi">MARDI</string>
    <string name="navcam">NAVCAM</string>
    <string name="pancam">PANCAM</string>
    <string name="minites">MINITES</string>
    <string name="none">None</string>
    <string name="date">Date</string>
    <string name="rover_name">Rover Name</string>
    <string name="camera">Camera</string>
    <string name="status">Status</string>
    <string name="launch_date">Launch Date</string>
    <string name="landing_date">Landing Date</string>
    <string name="retry">Retry</string>
</resources>