<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.synthesizer.source.mars.ui.photodetail.PhotoDetailViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        card_view:cardPreventCornerOverlap="false"
        tools:viewBindingIgnore="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:load="@{viewModel.photoDetail.imgSrc}"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/photo" />

            <TextView
                android:id="@+id/earthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.photoDetail.earthDate}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/labelDate"
                tools:text="01.01.1999" />

            <TextView
                android:id="@+id/labelRoverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/rover_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/earthDate" />

            <TextView
                android:id="@+id/roverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.photoDetail.rover.name}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/labelRoverName"
                tools:text="Curiosity" />

            <TextView
                android:id="@+id/labelCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/camera"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/roverName" />

            <TextView
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="24dp"
                android:text="@{viewModel.photoDetail.camera.fullName}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/labelCamera"
                tools:text="Front Hazard Avoidance Camera" />

            <TextView
                android:id="@+id/labelStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toTopOf="@id/labelDate" />

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.photoDetail.rover.status}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/labelStatus"
                tools:text="Complete" />

            <TextView
                android:id="@+id/labelLaunchDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/launch_date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/status" />

            <TextView
                android:id="@+id/launchDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.photoDetail.rover.launchDate}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/labelLaunchDate"
                tools:text="01.01.1999" />

            <TextView
                android:id="@+id/labelLandingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/landing_date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/launchDate" />

            <TextView
                android:id="@+id/landingDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.photoDetail.rover.landingDate}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@id/labelLandingDate"
                tools:text="01.01.1999" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>